# vdb

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs  metrics.rs  params.rs  storage.rs  types.rs  vector_db.rs
tests/: basic.rs  crud.rs  exhaustive.rs
