[package]
name = "vdb"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
hnsw = "0.11"
rand_pcg = "0.3"
anyhow = "1"
space = "0.17"
ordered-float = "4"
rayon = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
